--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 # This file lists all individuals having contributed content to the repository
 # For how it is generated, see 'generateAuthors'
 
+Olalekan Jimoh
 Alexa Orrico <alexaorrico@gmail.com>
 alexaorrico <alexaorrico@gmail.com>
 Jennifer Huang <jhuang1012bn@yahoo.com>
